<resources>
    <string name="app_name">DailyDeals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? SignUp</string>
    <string name="daily_deals">Daily Deals</string>
    <string name="find_discover_buy">Find | Discover | Buy</string>
    <string name="already_have_an_account_signin">Already have an account? SignIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">User name</string>
    <string name="phone">Phone</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="set_profile_image">Set Profile Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="galley">Galley</string>
    <string name="camera">Camera</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="open">Contact Us</string>
    <string name="close">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
</resources>