<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/home" />
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/navOrder"
            android:icon="@drawable/ic_checklist"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/navWishlist"
            android:icon="@drawable/camera"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/navAboutUs"
            android:icon="@drawable/ic_helpline"
            android:title="@string/about_us" />

        <item
            android:id="@+id/navContactUs"
            android:icon="@drawable/ic_helpline"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/navTnC"
            android:icon="@drawable/ic_box_gift"
            android:title="@string/terms_and_conditions" />
        <item
            android:id="@+id/navPrivacy"
            android:icon="@drawable/ic_box_gift"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_box_gift"
            android:title="@string/logout" />
    </group>
</menu>