<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OnBoardingActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/skip"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/screnViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_4sdp"
        app:layout_constraintBottom_toTopOf="@+id/bottomCons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSkip" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomCons"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_next"
            android:drawableTint="@color/themeColor"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/themeColor"
            app:layout_constraintBottom_toBottomOf="@id/tab_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tab_indicator" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/btn_style"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_34sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@+id/bottomCons"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintStart_toStartOf="@+id/bottomCons"
            app:tabBackground="@drawable/indicator_selector"
            app:tabIndicatorHeight="0dp">

        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>